--- a/res/style.css
+++ b/res/style.css
@@ -1,6 +1,5 @@
 .bot-display {
-	zoom: 20%;
-	height: 1500px;
+	height: 300px;
 	overflow-y: scroll;
 	border: solid 2px #666;
 	padding: 5px;
@@ -52,5 +51,6 @@ textarea#payload {
 }
 
 .jh-root {
-	border: 10px solid #666 !important;
+	border: 3px solid #666 !important;
+	font-size: 12px;
 }
