various UI changes.

--- a/res/codemirror.css
+++ b/res/codemirror.css
@@ -4,7 +4,7 @@
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
   height: auto;
-  border: 1px solid #eee;
+  border: 2px solid #666;
   color: black;
 }
 
