allow to save bot session to file.

--- a/res/style.css
+++ b/res/style.css
@@ -8,7 +8,7 @@
 	width: 87%;
 }
 
-.bot-panel, .bot-advance, .bot-debug-lastpara {
+.bot-panel, .bot-advance, .bot-debug-lastpara, .bot-session {
 	width: 35%;
 }
 
