--- a/res/codemirror.css
+++ b/res/codemirror.css
@@ -4,6 +4,7 @@
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
   height: auto;
+  max-width: 100%;
   border: 2px solid #666;
   color: black;
 }
