--- a/res/style.css
+++ b/res/style.css
@@ -1,19 +1,38 @@
+@media (max-width: 1100px) {
+	.bot-ui {
+		max-width: 95%;
+		min-width: 95%;
+	}
+}
+
+@media (min-width: 1100px) {
+	.bot-display-container,
+	.bot-last-log-container {
+		min-width: 42.5%;
+		max-width: 42.5%;
+		display: inline-block;
+	}
+	.bot-debug-lastpara,
+	.bot-debug-lastjson {
+		width: 100%;
+	}
+	.bot-panel,
+	.bot-advance,
+	.bot-session {
+		min-width: 35%;
+		max-width: 35%;
+	}
+	.bot-code,
+	.bot-file {
+		min-width: 50%;
+		max-width: 50%;
+	}
+}
+
 .bot-display {
 	height: 300px;
 	overflow-y: scroll;
 	resize: vertical;
-}
-
-.bot-display-container {
-	width: 87%;
-}
-
-.bot-panel, .bot-advance, .bot-debug-lastpara, .bot-session {
-	width: 35%;
-}
-
-.bot-code, .bot-file, .bot-debug-lastjson {
-	width: 50%;
 }
 
 .bot-ui {
@@ -31,7 +50,11 @@ textarea#code {
 	height: 120px;
 }
 
-textarea#payload, textarea#lrpayload, textarea#text, textarea#plainei, textarea#evalCode {
+textarea#payload,
+textarea#lrpayload,
+textarea#text,
+textarea#plainei,
+textarea#evalCode {
 	width: 95%;
 	height: 50px;
 }
@@ -59,17 +82,18 @@ body {
 	font-family: "Courier New", Courier, monospace;
 }
 
-textarea { 
+textarea {
 	font-family: inherit;
 	font-size: inherit;
 	border: solid 2px #666;
 }
 
-textarea, input {
+textarea,
+input {
 	outline: none;
-	 -webkit-appearance: none;
-	 -webkit-border-radius: 0;
-	 border-radius: 0;
+	-webkit-appearance: none;
+	-webkit-border-radius: 0;
+	border-radius: 0;
 }
 
 select {
