--- a/res/style.css
+++ b/res/style.css
@@ -1,22 +1,27 @@
-@media (max-width: 1100px) {
+@media (max-width: 900px) {
 	.bot-ui {
 		max-width: 95%;
 		min-width: 95%;
 	}
 }
 
-@media (min-width: 1100px) {
-	.bot-display-container,
+@media (min-width: 900px) {
+	/*.bot-display-container{
+		min-width: 500px !important;
+		max-width: 50% !important;
+		display: inline-block;
+	}
+
 	.bot-last-log-container {
-		min-width: 42.5%;
-		max-width: 42.5%;
+		min-width: 350px !important;
+		max-width: 35% !important;
 		display: inline-block;
 	}
 	.bot-debug-lastpara,
 	.bot-debug-lastjson {
 		width: 100%;
-	}
-	.bot-panel,
+	}*/
+	/*.bot-panel,
 	.bot-advance,
 	.bot-session {
 		min-width: 35%;
@@ -26,6 +31,23 @@
 	.bot-file {
 		min-width: 50%;
 		max-width: 50%;
+	}*/
+	div.bot-ui.bot-display-container {
+		min-width: 500px;
+		max-width: 35%;
+	}
+
+	.bot-panels-container-left, bot-display-container {
+		min-width: 350px;
+		max-width: 35%;
+		display: inline-block;
+		vertical-align: top;
+	}
+	.bot-panels-container-right, .bot-last-log-container {
+		min-width: 500px;
+		max-width: 50%;
+		display: inline-block;
+		vertical-align: top;
 	}
 }
 
@@ -36,9 +58,11 @@
 }
 
 .bot-ui {
+	min-width: 95%;
+	max-width: 95%;
 	vertical-align: top;
 	border: solid 2px #666;
-	margin-top: 2px;
+	margin-top: 10px;
 	padding: 5px;
 	display: inline-block;
 	background-color: #f2f2f2;
